crates/kul-render/tests/snapshots/corpus__example_11_cousin_marriage.snap
---
source: crates/kul-render/tests/corpus.rs
expression: json
---
{
  "ok": true,
  "schema": 2,
  "kul": "0.1",
  "components": [
    {
      "id": "comp-1",
      "sourceOrder": 1155,
      "kind": {
        "type": "familyTree",
        "root": {
          "slot": {
            "personId": "govind",
            "kind": {
              "kind": "canonical"
            },
            "generation": 0,
            "name": "Govind Iyer",
            "gender": "male",
            "born": {
              "value": "1900-02-14",
              "precision": "day",
              "circa": false
            }
          },
          "hostedMarriages": [
            {
              "bar": {
                "marriageId": "m_govind_lakshmi",
                "generation": 0,
                "hostId": "govind",
                "joiningId": "lakshmi",
                "joiningSlot": {
                  "personId": "lakshmi",
                  "kind": {
                    "kind": "canonical"
                  },
                  "generation": 0,
                  "name": "Lakshmi Iyer",
                  "gender": "female",
                  "born": {
                    "value": "1903-09-21",
                    "precision": "day",
                    "circa": false
                  }
                },
                "start": {
                  "value": "1922-05-30",
                  "precision": "day",
                  "circa": false
                },
                "ended": false
              },
              "children": [
                {
                  "slot": {
                    "personId": "arjun",
                    "kind": {
                      "kind": "canonical"
                    },
                    "generation": 1,
                    "name": "Arjun Iyer",
                    "gender": "male",
                    "born": {
                      "value": "1925-04-10",
                      "precision": "day",
                      "circa": false
                    }
                  },
                  "hostedMarriages": [
                    {
                      "bar": {
                        "marriageId": "m_arjun_indira",
                        "generation": 1,
                        "hostId": "arjun",
                        "joiningId": "indira",
                        "joiningSlot": {
                          "personId": "indira",
                          "kind": {
                            "kind": "canonical"
                          },
                          "generation": 1,
                          "name": "Indira Iyer",
                          "gender": "female",
                          "born": {
                            "value": "1928-11-12",
                            "precision": "day",
                            "circa": false
                          }
                        },
                        "start": {
                          "value": "1947-06-18",
                          "precision": "day",
                          "circa": false
                        },
                        "ended": false
                      },
                      "children": [
                        {
                          "slot": {
                            "personId": "maya",
                            "kind": {
                              "kind": "canonical"
                            },
                            "generation": 2,
                            "name": "Maya Iyer",
                            "gender": "female",
                            "born": {
                              "value": "1948-07-09",
                              "precision": "day",
                              "circa": false
                            }
                          },
                          "hostedMarriages": [
                            {
                              "bar": {
                                "marriageId": "m_maya_nikhil",
                                "generation": 2,
                                "hostId": "maya",
                                "joiningId": "nikhil",
                                "joiningSlot": {
                                  "personId": "nikhil",
                                  "kind": {
                                    "kind": "canonical"
                                  },
                                  "generation": 2,
                                  "name": "Nikhil Iyer",
                                  "gender": "male",
                                  "born": {
                                    "value": "1952-01-23",
                                    "precision": "day",
                                    "circa": false
                                  }
                                },
                                "start": {
                                  "value": "1975-08-14",
                                  "precision": "day",
                                  "circa": false
                                },
                                "ended": false
                              },
                              "children": []
                            }
                          ]
                        }
                      ]
                    }
                  ]
                },
                {
                  "slot": {
                    "personId": "bharat",
                    "kind": {
                      "kind": "canonical"
                    },
                    "generation": 1,
                    "name": "Bharat Iyer",
                    "gender": "male",
                    "born": {
                      "value": "1928-09-15",
                      "precision": "day",
                      "circa": false
                    }
                  },
                  "hostedMarriages": [
                    {
                      "bar": {
                        "marriageId": "m_bharat_janaki",
                        "generation": 1,
                        "hostId": "bharat",
                        "joiningId": "janaki",
                        "joiningSlot": {
                          "personId": "janaki",
                          "kind": {
                            "kind": "canonical"
                          },
                          "generation": 1,
                          "name": "Janaki Iyer",
                          "gender": "female",
                          "born": {
                            "value": "1930-04-28",
                            "precision": "day",
                            "circa": false
                          }
                        },
                        "start": {
                          "value": "1950-11-19",
                          "precision": "day",
                          "circa": false
                        },
                        "ended": false
                      },
                      "children": [
                        {
                          "slot": {
                            "personId": "nikhil",
                            "kind": {
                              "kind": "ghost",
                              "reason": "pastBirth"
                            },
                            "generation": 2,
                            "name": "Nikhil Iyer",
                            "gender": "male",
                            "born": {
                              "value": "1952-01-23",
                              "precision": "day",
                              "circa": false
                            }
                          },
                          "hostedMarriages": []
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      }
    }
  ],
  "edges": [
    {
      "kind": "birth",
      "childId": "arjun",
      "marriageId": "m_govind_lakshmi"
    },
    {
      "kind": "birth",
      "childId": "bharat",
      "marriageId": "m_govind_lakshmi"
    },
    {
      "kind": "birth",
      "childId": "maya",
      "marriageId": "m_arjun_indira"
    },
    {
      "kind": "birth",
      "childId": "nikhil",
      "marriageId": "m_bharat_janaki"
    }
  ]
}
